c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/malformed_less_equal.c
int main(void)
{
    // make sure we lex < and = as two separate tokens
    // this really tests the lexing logic from previous chapter,
    // but the lexer didn't recognize = yet
    return 1 < = 2;
}